# churchcore

./: .cursorignore  .dockerignore  .env.example  .gitignore  README.md  langgraph.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.base.json
.cursor/rules/: always-use-llm.mdc  langgraph-agent-flow-only.mdc
apps/: .cursorignore
apps/a2a-gateway-worker/: README.md  package.json  wrangler.jsonc
apps/a2a-gateway-worker/src/: index.ts
apps/api/: church_agent.py  graph.py  knowledge_index.py  mcp_tools.py  models.py
apps/churchcore-mcp/: .env  CRAWL.md  README.md  package.json  schema.sql  seed.sql  wrangler.jsonc
apps/churchcore-mcp/migrations/: 2026-03-02_events_outdoor_weather.sql  2026-03-03_community_catalog.sql  2026-03-03_household_profiles.sql  2026-03-04_weekly_podcasts.sql  2026-03-05_web_crawl_pages.sql  2026-03-06_messages_and_guides.sql  2026-03-07_campus_message_transcripts.sql  2026-03-07_group_invites_expiry.sql  2026-03-07_groups_membership_and_study.sql  2026-03-07_groups_recurring_schedule.sql  2026-03-08_transcription_jobs.sql  2026-03-09_bible_reading_plan.sql  2026-03-10_topic_templates.sql
apps/churchcore-mcp/src/: index.ts
apps/churchcore-mcp/tools/: load-ontology-to-graphdb.mjs  openbible-import.mjs  openbible-import.sql  openbible-mapping.json  transcribe-message.mjs
apps/web/: eslint.config.mjs  package.json  tsconfig.json
apps/web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  trace  (+3 more)
scripts/: prove-chat-stream.mjs
(+276 files in other folders)
