[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "church-agent-platform"
version = "0.0.0"
requires-python = ">=3.11"

# LangSmith Deployments installs Python deps from requirements.txt.
# This package stanza exists to ensure `apps.*` is importable in all runtimes.

[tool.setuptools.packages.find]
include = ["apps*"]

