[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "church-agent-platform"
version = "0.0.0"
requires-python = ">=3.11"

dependencies = [
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.3.0",
  "langchain-mcp-adapters",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
]

# LangSmith Deployments installs Python deps from requirements.txt.
# This package stanza exists to ensure `apps.*` is importable in all runtimes.

[tool.setuptools.packages.find]
include = ["apps*"]

